# estudo_crewai

./: .gitignore  README.md  pyproject.toml  resumo_didatico.md
src/estudo_crewai/: crew.py  main.py
src/estudo_crewai/config/: agents.yaml  tasks.yaml
